grafana/grafana_v1_Namespace_grafana.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
  name: grafana
  namespace: grafana
