grafana/grafana_networking.k8s.io-v1_Ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 13.0.1
    helm.sh/chart: grafana-12.0.0
  name: grafana
  namespace: grafana
spec:
  rules:
  - host: grafana.hfym.co
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.hfym.co
    secretName: grafana-tls
